fix: resolve overflowing issue
The Main component was overflowing behind the Sidebar due to the latter's position being absolute.

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,10 +1,7 @@
 .sidebar {
     display: flex;
     flex-direction: column;
-    position: absolute;
     width: 242px;
-    left: 0px;
-    top: 0px;
     gap: 2.5rem;
     width: 242px;
     min-height: 100vh;
